--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Document</title>
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <title>Fridge Thermometer</title>
+    <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 </head>
+
+<style>
+    body {
+        background-color: #344955;
+    }
+</style>
 
 <body>
     <div class="container-lg px-3 my-5 markdown-body">
