--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Fridge Thermometer</title>
-    <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <title>Document</title>
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 </head>
 
 <body>
@@ -13,5 +12,4 @@
         {{ content }}
     </div>
 </body>
-
 </html>
