--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+    
+<style>
+    .body{
+        background-color:light-blue;
+    }
+</style>
+   
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Document</title>
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 </head>
-
+   
 <body>
     <div class="container-lg px-3 my-5 markdown-body">
         {{ content }}
