--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-   
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Document</title>
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <style>
-        body{
-            background-color:#546E7A;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
 
 </head>
-   
+
 <body>
     <div class="container-lg px-3 my-5 markdown-body">
         {{ content }}
     </div>
 </body>
+
 </html>
