--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>FridgeThermometer</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
-
+    <title>Fridge Thermometer</title>
+    <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 </head>
+
+<style>
+    body {
+        background-color: #344955;
+        font-family: Arial;
+        color: aliceblue;
+    }
+</style>
 
 <body>
     <div class="container-lg px-3 my-5 markdown-body">
