--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,8 +11,7 @@
 <style>
     body {
         background-color: #344955;
-        font-family: Arial;
-        color: aliceblue;
+        color: white;
     }
 </style>
 
