--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,8 +10,8 @@
 
 <style>
     body {
-        background-color: #344955;
-        color: white;
+        background-color: #0d1117;
+        color: #c1d1d9;
     }
 </style>
 
