--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>CS2113 iP Duke</title>
+  <title>Fridge Thermometer</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
@@ -31,7 +31,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-end">
-    <a class="navbar-brand" href="#">Duke</a>
+    <a class="navbar-brand" href="#">Fridge Thermometer</a>
     <button onclick="toggleMode()" id="toggleBtn" class="btn ml-auto"
       style="background-color: transparent; color:white; box-shadow:none; outline:none">
       <span class="glyphicon glyphicon-adjust"></span>
