Change color palatte

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
   }
 
   .light-mode {
-    background-color: #cdc9de;
+    background-color: #fafafa;
     color: #071822;
   }
 
@@ -27,7 +27,6 @@
     background-color: #263238 !important;
   }
 </style>
-
 
 <body>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-end">
@@ -53,7 +52,6 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-
         </li>
       </ul>
     </div>
