--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,85 +1,12 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>Fridge Thermometer</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-
-<style>
-  body {
-    background-color: #071822;
-    color: #c1d1d9;
-  }
-
-  .light-mode {
-    background-color: #fafafa;
-    color: #071822;
-  }
-
-  .highlight {
-    color: white;
-    background-color: #263238 !important;
-  }
-</style>
-
-<body>
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-end">
-    <a class="navbar-brand" href="#">Fridge Thermometer</a>
-    <button onclick="toggleMode()" id="toggleBtn" class="btn ml-auto"
-      style="background-color: transparent; color:white; box-shadow:none; outline:none">
-      <span class="glyphicon glyphicon-adjust"></span>
-    </button>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
-      <ul class="navbar-nav text-right">
-        <li class="Adding Tasks">
-          <a class="nav-link" href="">Task 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Task 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Task 3</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container-lg px-3 my-5 markdown-body">
-    {{ content }}
-  </div>
-  <script>
-    function toggleMode() {
-      var element = document.body;
-      element.classList.toggle("light-mode");
-      var toggle_btn = document.getElementById("toggleBtn");
-    }
-  </script>
-</body>
-
-</html>
-=======
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width"/>
+    <meta content="width=device-width" name="viewport"/>
     <title>tp</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -105,16 +32,21 @@
         padding: 15px;
     }
 
+    img {
+        max-width: 100%;
+        background-color: #ffffff;
+    }
+
 </style>
 
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-end">
     <a class="navbar-brand" href="/tp">Fitness Duke</a>
-    <button onclick="toggleMode()" id="toggleBtn" class="btn ml-auto"
+    <button class="btn ml-auto" id="toggleBtn" onclick="toggleMode()"
             style="background-color: transparent; color:white; box-shadow:none; outline:none">
         <span class="glyphicon glyphicon-adjust"></span>
     </button>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <button class="navbar-toggler" data-target="#collapsibleNavbar" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
@@ -142,9 +74,7 @@
     function toggleMode() {
         var element = document.body;
         element.classList.toggle("light-mode");
-        var toggle_btn = document.getElementById("toggleBtn");
     }
 </script>
 </body>
 </html>
->>>>>>> 6db50d0ea9f6ca564c86de17b6c4e6d74f182c8b
