--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,38 +7,10 @@
     <title>tp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>  
 </head>
-
-<style>
-    body {
-        background-color: #071822;
-        color: #c1d1d9;
-    }
-
-    .light-mode {
-        background-color: #fafafa;
-        color: #071822;
-    }
-
-    .highlight {
-        color: white;
-        background-color: #263238 !important;
-    }
-
-    table, th, td {
-        border: 1px solid;
-        padding: 15px;
-    }
-
-    img {
-        max-width: 100%;
-        background-color: #ffffff;
-    }
-
-</style>
-
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-end">
     <a class="navbar-brand" href="/tp">Fitness Duke</a>
